--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==3.0.3
-flask_sqlalchemy==3.1.1
-python-dotenv==1.0.1
-gunicorn==22.0.0
-psycopg2-binary==2.9.9
+flask
+flask_sqlalchemy
+python-dotenv
+gunicorn
+psycopg[binary]==3.2.1
